<resources>
    <string name="app_name">GuessSongs</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="passwordre">password:</string>
    <string name="usernamere">username:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="welcome_to_guess_songs">Welcome to Guess Songs!</string>
    <string name="search">Search</string>
    <string name="search_by_title_artist">Search by Title / Artist</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm">confirm</string>
    <string name="go_back">return</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>
    <string name="competitive">Competitive</string>
    <string name="leaderboard">leaderboard</string>
    <string name="endless">Endless</string>
    <string name="classic">Classic</string>
    <string name="manual">Manual</string>
    <string name="scan_to_support_the_creator">Scan to support the creator!</string>
    <string name="log_out">Log out</string>
    <string name="music_list">Music List</string>

</resources>
