<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log.RegisterActivity"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#374AB3"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/usernamere"
            android:textColor="#374AB3"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edittext_background"
            android:padding="10dp"
            android:hint="@string/enter_your_username"
            android:layout_marginRight="30dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:text="@string/passwordre"
            android:textColor="#374AB3"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/edittext_background"
            android:padding="10dp"
            android:hint="@string/enter_your_password"
            android:layout_marginRight="30dp"
            android:textSize="18sp"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">
        <android.widget.Button
            android:background="@drawable/button_background"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/go_back"
            android:textSize="20sp"
            android:id="@+id/BacktoMain"
            android:layout_marginRight="20dp"
            android:textColor="@color/white" />
        <android.widget.Button
            android:background="@drawable/button_background"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:id="@+id/newUser"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>