<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.MainActivity"
    android:background="@drawable/background_gradient">

    <!-- Main Content (buttons and text) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="663dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginTop="16dp"
            android:text="Select Game Mode"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />


        <android.widget.Button
            android:id="@+id/manual"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/manual"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <android.widget.Button
            android:id="@+id/start_game"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/classic"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <android.widget.Button
            android:id="@+id/hardmode"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/endless"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <android.widget.Button
            android:id="@+id/history"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/leaderboard"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <android.widget.Button
            android:id="@+id/mc"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/competitive"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#45FFFFFF"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
